#PK-184 Ui Design For Add On Product

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -632,6 +632,18 @@
     "Permission:UserAdresses": "User Adresses",
     "Permission:SetIsDefault": "Set Default",
     "PostalCode": "Postal Code",
-    "ToggleFilters": "Toggle Filters"
+    "ToggleFilters": "Toggle Filters",
+
+    //Add On Products
+    "AddOnProducts": "Add-on Products",
+    "Permission:AddOnProducts": "Add-on Products",
+    "Menu:Promotions": "Promotions",
+    "Permission:Promotions": "Promotions",
+    "Name": "Name",
+    "SellingQuantity": "Selling Quantity",
+    "Time": "Time",
+    "From": "From",
+    "To": "To"
+
   }
 }
