Commit For PK-186

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -729,7 +729,27 @@
     "AllMethods": "All Methods",
     "SpecificMethods": "Specific Methods",
     "SelectaShippings": "Select a Shippings",
-    "DiscountAmount": "Discount Amount"
+    "DiscountAmount": "Discount Amount",
+
+    
+    "GetSettings": "Get Settings",
+    "RegistrationBounsPoint": "Registration Bonus Point",
+    
+    "BirthdayBounsPoint": "Birthday Bonus Point",
+    "ShoppingCashbackPoints": "Shopping Cashback Points",
+    "UseSettings": "Use Settings",
+    "AllowUsage": "Allow Usage",
+    
+    "UnifiedCalculation": "Unified Calculation",
+    "UseableforGroupbuying": "Usable for Group Buying",
+    "SpecificGroupbuy": "Specific Group Buy",
+    "UseableforProducts": "Usable for Products",
+   
+    "IssuedPoints": "Issued Points",
+    "Today": "Today",
+    "ThisWeek": "This Week",
+    "ThisMonth": "This Month",
+    "RedeemedPoints": "Redeemed Points"
 
 
   }
