Commit For PK-265,266,267,268,269

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -676,6 +676,7 @@
     "To": "To",
 
     "NewAddOnProducts": "New Add-On Products",
+    "UpdateAddOnProducts": "Update Add-On Products",
 
     "AddOnProduct": "Add-On Product",
     "SelectProduct": "Select a Product",
