#PK-275 POST Cart Item API

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -664,6 +664,7 @@
     "ExpiryDate": "Expiry Date",
     "RemainingCredits": "Remaining Credits",
     "Pikachu:ShopCartForUserAlreadyExists": "Shop Cart for this User Id already exists.",
+    "Pikachu:CartItemForUserAlreadyExists": "Cart Item for this Shop Cart already exists.",
     "Permission:ShopCart": "Shop Carts",
 
     //Add On Products
