#PK-248, #PK-249 Tenant Domain Column

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -734,7 +734,7 @@
     "SpecificMethods": "Specific Methods",
     "SelectaShippings": "Select a Shippings",
     "DiscountAmount": "Discount Amount",
-
+    "TextCopied": "Text Copied: {0}",
 
     "GetSettings": "Get Settings",
     "RegistrationBounsPoint": "Registration Bonus Point",
