#PK-306 Updated GroupBuy calendar module

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -807,6 +807,8 @@
     "TheBannerFieldIsRequired": "The Banner field is required.",
     "TheFaviconFieldIsRequired": "The Favicoin field is required.",
     "ValidationErrors": "Validation Errors!",
-    "TenantSettingsUpdated": "Tenant Settings Updated!"
+    "TenantSettingsUpdated": "Tenant Settings Updated!",
+    "StartTime": "Start Time",
+    "EndTime": "End Time"
   }
 }
