Commit For PK-339

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -628,7 +628,7 @@
     "UploadBanner": "上傳 Banner",
     "SelectTenantAdministrator": "請選擇租戶管理者",
     "SelectContactTitle": "請選擇聯絡人稱呼",
-    "Status": "租戶狀態",
+    "Status": "狀態",
     "Link": "連結",
     "TenantName": "租戶名稱",
     "TotalOrder": "訂單總數",
