#PK-317 Implemented Website settings backend

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -809,6 +809,7 @@
     "ValidationErrors": "Validation Errors!",
     "TenantSettingsUpdated": "Tenant Settings Updated!",
     "StartTime": "Start Time",
-    "EndTime": "End Time"
+    "EndTime": "End Time",
+    "Pikachu:InvalidEnumValue": "The value provided for {name} is invalid"
   }
 }
