--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -823,6 +823,8 @@
     "Enum:WebsiteTitleDisplayOptions.1": "Store Title | Category Name",
     "Enum:WebsiteTitleDisplayOptions.2": "Category Name | Store Title",
     "AddWebsiteSettings": "Add Website Settings",
-    "AreYouSureToDeleteThisRecord": "Are you sure you want to delete this record?"
+    "AreYouSureToDeleteThisRecord": "Are you sure you want to delete this record?",
+    "TitleDisplayOptions": "Title Display Options",
+    "EditWebsiteSettings": "Edit Website Settings"
   }
 }
