#PK-406 Fetch User details from Line

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -853,6 +853,7 @@
     "CodeIsExpired": "The code has expired. Please try again.",
     "CodeDoesnotMatch": "The provided code is invalid.",
     "DefaultPrivacyPolicy": "Default Privacy Policy",
-    "LoginConfigurationsUpdated": "Login Configurations Updated!"
+    "LoginConfigurationsUpdated": "Login Configurations Updated!",
+    "UnableToRetrieveUserDetails": "Unable to retrieve user's details from {0}."
   }
 }
