--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -193,7 +193,7 @@
     "InvalidSendTime": "無效的發送時間",
     "InvalidStartDate": "無效的開始日期",
     "InvalidTradeName": "無效的交易名稱",
-    "InventoryAccount": "倉儲帳戶",
+    "InventoryAccount": "倉儲名稱",
     "InviteCode": "團購邀請碼",
     "Invoice": "發票",
     "InvoiceCarrier": "載具",
@@ -247,7 +247,7 @@
     "LowerCase": "小寫",
     "MainIslands": "本島",
     "ManualStatusUpdate": "手動調整狀態",
-    "MaxAvailableTime": "最長可用時間",
+    "MaxAvailableTime": "建立時間結束範圍",
     "Mazu": "馬祖",
     "Menu:CashFlowReconciliationStatement": "金流對帳表",
     "Menu:DeliveryByStoreSettings": "按商店配送設置",
@@ -278,7 +278,7 @@
     "MerchantRemark": "備註",
     "MerchantRemarks": "商家備註",
     "Miaoli": "苗栗縣",
-    "MinAvailableTime": "最短可用時間",
+    "MinAvailableTime": "建立時間起始範圍",
     "MinimumAmount": "最低金額",
     "MinimumPiece": "最低數量",
     "Nantou": "南投縣",
@@ -637,6 +637,259 @@
     "SalesAmount": "銷售金額",
     "AmountReceived": "已收款金額",
     "MerchantTradeNo": "商戶貿易號",
-    "TradeNo": "貿易號"
+    "TradeNo": "貿易號",
+    "Pikachu:InCompatibleModule": "Cannot save due to incompatible modules.",
+    "PikachuOne": "Pikachu 1.0",
+    "PikachuTwo": "Pikachu 2.0",
+    "SelectTemplate": "Select Template",
+    "TCatDeliveryNormal": "t-Cat Normal",
+    "TCatDeliveryFreeze": "t-Cat Freeze",
+    "TCatDeliveryFrozen": "t-Cat Frozen",
+    "TCatDeliverySevenElevenNormal": "t-Cat 7-11 Normal",
+    "TCatDeliverySevenElevenFreeze": "t-Cat 7-11 Freeze",
+    "TCatDeliverySevenElevenFrozen": "t-Cat 7-11 Frozen",
+    
+    "OuterIsland": "外島",
+  
+    "TCatDelivery": "t-cat(delivery)",
+    "TCatSevenToEleven": "t-cat(7-11)",
+   
+    "MembersManagement": "Members Management",
+    "Permission:Members": "Members",
+    "Permission:Create": "Create",
+    "Permission:Edit": "Edit",
+    "Permission:Delete": "Delete",
+    "Menu:Members": "Members",
+    "Menu:MembersList": "Members List",
+    "BasicDetails": "Basic Details",
+    "UserId": "User Id",
+    "LoginMethod": "Login Method",
+    "DataManagement": "Data Management",
+    "DeleteAccount": "Delete Account",
+    "DeleteMemberCautionMessage": "Remove this customer's chart if requested, if not please be aware that what has been deleted can never be brought back.",
+    "AreYouSureToDeleteThisMember": "Please be aware that once this member is deleted, it can never be restored. Do you wish to delete it?",
+    "EditMember": "Edit Member",
+    "FullName": "Full Name",
+    "EmailAddress": "Email Address",
+    "PhoneNumber": "Phone Number",
+    "DefaultAddress": "Default Address",
+    "EditAddress": "Edit Address",
+    "Permission:UserAdresses": "User Adresses",
+    "Permission:SetIsDefault": "Set Default",
+    "PostalCode": "Postal Code",
+    "ToggleFilters": "Toggle Filters",
+    "Permission:UserShoppingCredits": "User Shopping Credits",
+    "Permission:SetIsActive": "Set Active",
+    "Pikachu:ExpirationDateCannotBePast": "The Expiration Date for User Shopping Credits can not be in the past.",
+    "GrantShoppingCredits": "Grant Shopping Credits",
+    "ShoppingCredits": "Shopping Credits",
+    "GrantedAmount": "Granted Amount",
+    "SelectionRequired": "Selection is required.",
+    "Limited,ValidTo": "Limited, valid to",
+    "UsagePeriod": "Usage Period",
+    "NoExpiry": "No Expiry",
+    "SendNotification": "Send Notification",
+    "TransactionDetails": "Transaction Details",
+    "TransactionDescription": "Transaction Description",
+    "AmountString": "Amount",
+    "SelectionIsRequired": "The Usage Period field is required.",
+    "UsageTimeFrom": "Usage Time From",
+    "UsageTimeTo": "Usage Time To",
+    "ExpiryDateFrom": "Expiry Date From",
+    "ExpiryDateTo": "Expiry Date To",
+    "MinRemainingCredits": "Min Remaining Credits",
+    "MaxRemainingCredits": "Max Remaining Credits",
+    "MinAmount": "Min Amount",
+    "MaxAmount": "Max Amount",
+    "UsageTime": "Usage Time",
+    "ExpiryDate": "Expiry Date",
+    "RemainingCredits": "Remaining Credits",
+    "Pikachu:ShopCartForUserAlreadyExists": "Shop Cart for this User Id already exists.",
+    "Pikachu:CartItemForUserAlreadyExists": "Cart Item for this Shop Cart already exists.",
+    "Permission:ShopCart": "Shop Carts",
+    "Pikachu:InvalidServiceHoursException": "Service Hours must start before the End Time.",
+    "Pikachu:TenantSettingsAlreadyExist": "Tenant Settings for the current tenant already exist.",
+    "Permission:TenantSettings": "Tenant Settings",
+    "Menu:TenantSettings": "Tenant Settings",
+    "TenantId": "Tenant Id",
+    "TenantSettings": "Tenant Settings",
+    "WebpageTitle": "Webpage Title",
+    "CompanyName": "Company Name",
+    "BusinessRegistrationNumber": "Business Registration Number",
+    "ContactPhone": "Contact Phone",
+    "CustomerServiceEmail": "Customer Service Email",
+    "ServiceHours": "Service Hours",
+    "PrivacyPolicy": "Privacy Policy",
+
+
+    //Add On Products
+    "AddOnProducts": "Add-on Products",
+    "Permission:AddOnProducts": "Add-on Products",
+    "Menu:Promotions": "促銷優惠",
+    "Permission:Promotions": "促銷優惠",
+    "Name": "名稱",
+    "SellingQuantity": "可銷售數量",
+    "Time": "時間",
+    "From": "自",
+    "To": "至",
+    "NewAddOnProducts": "加購商品",
+    "UpdateAddOnProducts": "更新加購商品",
+    "AddOnProduct": "加購商品",
+    "SelectProduct": "選擇一個商品",
+    "AddOnProductAmount": "加購商品金額",
+    "AddOnLimitPerOrder": "每單限購數量",
+    "AvailableQuantity": "可用數量",
+    "Unlimited": "無限制(直到主商品售完為止)",
+    "AvailableQuantity:": "可用數量:",
+    "(Can'texceedthecurrentstockoftheoriginalproduct)": "(無法超過主商品之庫存數量)",
+    "DisplayOfOriginalPrice": "顯示原價",
+    "Donotdisplayoriginalprice": "不要顯示原價",
+    "Displayproduct'soriginalprice": "顯示商品原價",
+    "Displayproduct'sgroupbuyprice": "顯示商品的團購價",
+    "EventPeriod": "活動期間",
+    "AddOnSettings": "加購設定",
+    "Conditions": "條件",
+    "Nominimumspendingrequirement": "無最低訂單金額限制",
+    "Mustmeetaspecifiedspendingthreshold": "訂單需達到設定之金額",
+    "Eligibleadd-onrange": "符合加購範圍金額",
+    "Groupbuys": "團購",
+    "AllGroupBuys": "所有團購",
+    "SpecificGroupBuys": "特定團購",
+    "SelectaGroupBuys": "選擇一個團購",
+
+    "DiscountCodes": "折扣碼",
+    "Permission:DiscountCodes": "折扣碼",
+    "EventName": "活動名稱",
+    "NewDiscountCode": "新增折扣碼",
+    "Add-On Product": "加購商品",
+    "DiscountCode": "折扣碼",
+    "NoCodeRequiredForDiscount": "無需折扣碼",
+    "CustomCode:": "自訂折扣碼:",
+    "NumberOfIssuedCodes": "發行數量",
+    "MaximumUsePerPerson": "每人最大使用次數",
+    "DiscountRange": "折扣範圍",
+
+    "AllProducts": "所有商品",
+    "SpecificProducts": "特定商品",
+    "SelectaProduct": "選擇一個商品",
+    "DiscountMethod": "折扣方式",
+    "DirectDiscount": "直接折扣",
+    "MinimumSpendDiscount,RequiresSpending$": "最低消費折扣,需消費$",
+    "AllShippingMethods": "所有運送方式",
+    "SpecificShippingMethods": "特定運送方式",
+    "SelectaShippingMethod": "選擇一個運送方式",
+    "ShippingDiscount": "運費折扣",
+    "DiscountOf$": "折抵($)",
+    "DiscountOf%": "折抵(%)",
+    "ShippingSettings": "運費設定",
+    "AllMethods": "所有方式",
+    "SpecificMethods": "指定方式",
+    "SelectaShippings": "選擇運送方式",
+    "DiscountAmount": "折扣金額",
+    "TextCopied": "已複製文字: {0}",
+
+    "GetSettings": "取得設定",
+    "RegistrationBounsPoint": "註冊獎勵點數",
+
+    "BirthdayBounsPoint": "生日獎勵點數",
+    "ShoppingCashbackPoints": "購物返現點數",
+    "UseSettings": "使用設定",
+    "AllowUsage": "允許使用",
+
+    "UnifiedCalculation": "統一計算",
+    "UseableforGroupbuying": "可用於團購",
+    "SpecificGroupbuy": "特定團購",
+    "UseableforProducts": "可用於商品",
+
+    "IssuedPoints": "發行點數",
+    "Today": "今日",
+    "ThisWeek": "本週",
+    "ThisMonth": "本月",
+    "RedeemedPoints": "已兌換點數",
+
+
+    "DeductionMethod": "扣點方式",
+    "UnifiedCalculation:": "統一計算:",
+    "StagedCalculation": "分段計算",
+    "Spend": "消費",
+    "ToReceivePoints": "可獲得點數",
+    "ApplicableItems": "適用項目",
+
+    "ShippingFees": "運費",
+    "UsableScope": "可用範圍",
+    "UsableforGroupbuying": "可用於團購",
+    "AllGroupbuys": "所有團購",
+    "SpecificGroupbuys": "特定團購",
+
+    "SelectaProducts": "選擇一個商品",
+
+    "Create": "新增",
+
+    "EarnedPoints": "獲得點數",
+
+    "Limited,validfordays": "限制,有效天數",
+
+    "CalculationMethod": "計算方式",
+
+    "StageSettings": "分段設定",
+
+    "Add-OnProducts": "加購商品",
+
+    "ApplicableforGroupbuying": "適用於團購",
+
+    "ApplicableforProducts": "適用於商品",
+    "Pikachu:ImageSizeExceeds": "圖片大小超過上限{0}MB",
+    "Pikachu:InvalidImageExtension": "無效的圖片副檔名{0}.",
+    "TheFieldIsRequired": "{0} 欄位是必填",
+    "TheLogoFieldIsRequired": "Logo 欄位是必填",
+    "TheBannerFieldIsRequired": "Banner 欄位是必填",
+    "TheFaviconFieldIsRequired": "Favicon 欄位是必填",
+    "ValidationErrors": "驗證錯誤!",
+    "TenantSettingsUpdated": "商戶設定已更新!",
+    "StartTime": "開始時間",
+    "EndTime": "結束時間",
+    "Pikachu:InvalidEnumValue": "提供給{name}值是無效的",
+    "Menu:WebsiteManagement": "網站管理",
+    "Menu:WebsiteSettings": "網站設定",
+    "WebsiteSettings": "網站設定",
+    "NotificationBar": "通知條",
+    "StoreTitle": "商店標題",
+    "LogoName": "Logo 名稱",
+    "ReturnExchangePolicy": "退換貨政策",
+    "TitleDisplayOption": "標題顯示選項",
+    "Enum:WebsiteTitleDisplayOptions.0": "商店標題",
+    "Enum:WebsiteTitleDisplayOptions.1": "商店標題 | 類別名稱",
+    "Enum:WebsiteTitleDisplayOptions.2": "類別名稱 | 商店標題",
+    "AddWebsiteSettings": "新增網站設定",
+    "AreYouSureToDeleteThisRecord": "確定要刪除這筆記錄嗎?",
+    "TitleDisplayOptions": "標題顯示選項",
+    "EditWebsiteSettings": "編輯網站設定",
+    "Enum:UserTypes.0": "所有",
+    "Enum:UserTypes.1": "前台",
+    "Enum:UserTypes.2": "後台",
+    "UserTypes": "使用者類型",
+    "ContactInformation": "聯絡資訊",
+    "AreYouSureToResetTheForm": "確定要重置表單嗎?",
+    "ServiceHoursFrom": "服務時間從",
+    "ServiceHoursTo": "服務時間至",
+    "ShortCodeValidationMessage": "短碼只能包含字母和數字",
+    "ShareProfitPercent": "分潤百分比",
+    "SpecifyCompanyPrivacyPolicy": "指定公司隱私政策",
+    "Menu:LoginConfigurations": "登入設定",
+    "LoginConfigurations": "登入設定",
+    "AppId": "應用程式編號",
+    "AppSecret": "應用程式密鑰",
+    "ChannelSecret": "Channel Secret",
+    "AreYouSureToUpdate": "確定要更新嗎?",
+    "VerificationToken": "驗證 Token",
+    "VerificationCodeEmailBody": "這是驗證碼,請勿向任何人分享這組編碼.",
+    "ResetPasswordCodeEmailBody": "這是密碼重置碼,請勿向任何人分享這組編碼.",
+    "ResetPasswordCode": "密碼重置碼",
+    "EmailAddressNotFound": "查無使用這組Email的用戶.",
+    "UserIsNotActive": "使用者未啟用或不存在.",
+    "CodeIsExpired": "該編碼已過期,請再試一次.",
+    "CodeDoesnotMatch": "提供之編碼為無效.",
+    "DefaultPrivacyPolicy": "預設隱私政策",
+    "LoginConfigurationsUpdated": "登入設定已更新!"
   }
 }
