--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -638,93 +638,93 @@
     "AmountReceived": "已收款金額",
     "MerchantTradeNo": "商戶貿易號",
     "TradeNo": "貿易號",
-    "Pikachu:InCompatibleModule": "Cannot save due to incompatible modules.",
+    "Pikachu:InCompatibleModule": "無法使用不相容的模組",
     "PikachuOne": "Pikachu 1.0",
     "PikachuTwo": "Pikachu 2.0",
-    "SelectTemplate": "Select Template",
-    "TCatDeliveryNormal": "t-Cat Normal",
-    "TCatDeliveryFreeze": "t-Cat Freeze",
-    "TCatDeliveryFrozen": "t-Cat Frozen",
-    "TCatDeliverySevenElevenNormal": "t-Cat 7-11 Normal",
-    "TCatDeliverySevenElevenFreeze": "t-Cat 7-11 Freeze",
-    "TCatDeliverySevenElevenFrozen": "t-Cat 7-11 Frozen",
+    "SelectTemplate": "選擇模板",
+    "TCatDeliveryNormal": "黑貓常溫",
+    "TCatDeliveryFreeze": "黑貓冷藏",
+    "TCatDeliveryFrozen": "黑貓冷凍",
+    "TCatDeliverySevenElevenNormal": "黑貓7-11常溫",
+    "TCatDeliverySevenElevenFreeze": "黑貓7-11冷藏",
+    "TCatDeliverySevenElevenFrozen": "黑貓7-11冷凍",
     
     "OuterIsland": "外島",
   
-    "TCatDelivery": "t-cat(delivery)",
-    "TCatSevenToEleven": "t-cat(7-11)",
+    "TCatDelivery": "黑貓宅急便",
+    "TCatSevenToEleven": "黑貓7-11",
    
-    "MembersManagement": "Members Management",
-    "Permission:Members": "Members",
-    "Permission:Create": "Create",
-    "Permission:Edit": "Edit",
-    "Permission:Delete": "Delete",
-    "Menu:Members": "Members",
-    "Menu:MembersList": "Members List",
-    "BasicDetails": "Basic Details",
-    "UserId": "User Id",
-    "LoginMethod": "Login Method",
-    "DataManagement": "Data Management",
-    "DeleteAccount": "Delete Account",
-    "DeleteMemberCautionMessage": "Remove this customer's chart if requested, if not please be aware that what has been deleted can never be brought back.",
-    "AreYouSureToDeleteThisMember": "Please be aware that once this member is deleted, it can never be restored. Do you wish to delete it?",
-    "EditMember": "Edit Member",
-    "FullName": "Full Name",
-    "EmailAddress": "Email Address",
-    "PhoneNumber": "Phone Number",
-    "DefaultAddress": "Default Address",
-    "EditAddress": "Edit Address",
-    "Permission:UserAdresses": "User Adresses",
-    "Permission:SetIsDefault": "Set Default",
-    "PostalCode": "Postal Code",
-    "ToggleFilters": "Toggle Filters",
-    "Permission:UserShoppingCredits": "User Shopping Credits",
-    "Permission:SetIsActive": "Set Active",
-    "Pikachu:ExpirationDateCannotBePast": "The Expiration Date for User Shopping Credits can not be in the past.",
-    "GrantShoppingCredits": "Grant Shopping Credits",
-    "ShoppingCredits": "Shopping Credits",
-    "GrantedAmount": "Granted Amount",
-    "SelectionRequired": "Selection is required.",
-    "Limited,ValidTo": "Limited, valid to",
-    "UsagePeriod": "Usage Period",
-    "NoExpiry": "No Expiry",
-    "SendNotification": "Send Notification",
-    "TransactionDetails": "Transaction Details",
-    "TransactionDescription": "Transaction Description",
-    "AmountString": "Amount",
-    "SelectionIsRequired": "The Usage Period field is required.",
-    "UsageTimeFrom": "Usage Time From",
-    "UsageTimeTo": "Usage Time To",
-    "ExpiryDateFrom": "Expiry Date From",
-    "ExpiryDateTo": "Expiry Date To",
-    "MinRemainingCredits": "Min Remaining Credits",
-    "MaxRemainingCredits": "Max Remaining Credits",
-    "MinAmount": "Min Amount",
-    "MaxAmount": "Max Amount",
-    "UsageTime": "Usage Time",
-    "ExpiryDate": "Expiry Date",
-    "RemainingCredits": "Remaining Credits",
-    "Pikachu:ShopCartForUserAlreadyExists": "Shop Cart for this User Id already exists.",
-    "Pikachu:CartItemForUserAlreadyExists": "Cart Item for this Shop Cart already exists.",
-    "Permission:ShopCart": "Shop Carts",
-    "Pikachu:InvalidServiceHoursException": "Service Hours must start before the End Time.",
-    "Pikachu:TenantSettingsAlreadyExist": "Tenant Settings for the current tenant already exist.",
-    "Permission:TenantSettings": "Tenant Settings",
-    "Menu:TenantSettings": "Tenant Settings",
-    "TenantId": "Tenant Id",
-    "TenantSettings": "Tenant Settings",
-    "WebpageTitle": "Webpage Title",
-    "CompanyName": "Company Name",
-    "BusinessRegistrationNumber": "Business Registration Number",
-    "ContactPhone": "Contact Phone",
-    "CustomerServiceEmail": "Customer Service Email",
-    "ServiceHours": "Service Hours",
-    "PrivacyPolicy": "Privacy Policy",
+    "MembersManagement": "會員管理",
+    "Permission:Members": "會員管理",
+    "Permission:Create": "新增",
+    "Permission:Edit": "編輯",
+    "Permission:Delete": "刪除",
+    "Menu:Members": "會員管理",
+    "Menu:MembersList": "會員列表",
+    "BasicDetails": "基本資料",
+    "UserId": "會員編號",
+    "LoginMethod": "登入方式",
+    "DataManagement": "資料管理",
+    "DeleteAccount": "刪除帳號",
+    "DeleteMemberCautionMessage": "請在收到需求後才進行刪除,已刪除的資料將無法復原",
+    "AreYouSureToDeleteThisMember": "請注意,如果刪除該會員後將無法在恢復,確認是否刪除?",
+    "EditMember": "編輯會員",
+    "FullName": "姓名",
+    "EmailAddress": "電子郵件",
+    "PhoneNumber": "手機號碼",
+    "DefaultAddress": "預設地址",
+    "EditAddress": "編輯地址",
+    "Permission:UserAdresses": "會員地址",
+    "Permission:SetIsDefault": "設為預設",
+    "PostalCode": "郵遞區號",
+    "ToggleFilters": "切換篩選",
+    "Permission:UserShoppingCredits": "會員購物金",
+    "Permission:SetIsActive": "設為啟用",
+    "Pikachu:ExpirationDateCannotBePast": "到期日不能早於今天",
+    "GrantShoppingCredits": "發放購物金",
+    "ShoppingCredits": "購物金",
+    "GrantedAmount": "發放金額",
+    "SelectionRequired": "請選擇",
+    "Limited,ValidTo": "限制,有效至",
+    "UsagePeriod": "使用期限",
+    "NoExpiry": "無到期日",
+    "SendNotification": "發送通知",
+    "TransactionDetails": "交易明細",
+    "TransactionDescription": "交易描述",
+    "AmountString": "金額",
+    "SelectionIsRequired": "請選擇",
+    "UsageTimeFrom": "使用時間從",
+    "UsageTimeTo": "使用時間至",
+    "ExpiryDateFrom": "到期日從",
+    "ExpiryDateTo": "到期日至",
+    "MinRemainingCredits": "最小剩餘金額",
+    "MaxRemainingCredits": "最大剩餘金額",
+    "MinAmount": "最小金額",
+    "MaxAmount": "最大金額",
+    "UsageTime": "使用時間",
+    "ExpiryDate": "到期日",
+    "RemainingCredits": "剩餘金額",
+    "Pikachu:ShopCartForUserAlreadyExists": "該用戶已經有購物車",
+    "Pikachu:CartItemForUserAlreadyExists": "該商品已在購物車中",
+    "Permission:ShopCart": "購物車",
+    "Pikachu:InvalidServiceHoursException": "服務時間必須在結束時間前.",
+    "Pikachu:TenantSettingsAlreadyExist": "租戶設定已存在",
+    "Permission:TenantSettings": "租戶設定",
+    "Menu:TenantSettings": "租戶設定",
+    "TenantId": "租戶編號",
+    "TenantSettings": "租戶設定",
+    "WebpageTitle": "網頁標題",
+    "CompanyName": "公司名稱",
+    "BusinessRegistrationNumber": "統一編號",
+    "ContactPhone": "聯絡電話",
+    "CustomerServiceEmail": "客服信箱",
+    "ServiceHours": "服務時間",
+    "PrivacyPolicy": "隱私政策",
 
 
     //Add On Products
-    "AddOnProducts": "Add-on Products",
-    "Permission:AddOnProducts": "Add-on Products",
+    "AddOnProducts": "加購商品",
+    "Permission:AddOnProducts": "加購商品",
     "Menu:Promotions": "促銷優惠",
     "Permission:Promotions": "促銷優惠",
     "Name": "名稱",
