--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -855,6 +855,8 @@
     "DefaultPrivacyPolicy": "Default Privacy Policy",
     "LoginConfigurationsUpdated": "Login Configurations Updated!",
     "UnableToRetrieveUserDetails": "Unable to retrieve user's details from {0}.",
-    "PropertyName": "Property Name"
+    "PropertyName": "Property Name",
+    "TenantShortCodeRequired": "Short Code can not be empty",
+    "TenantShortCode": "Short Code"
   }
 }
