#PK-408 Domain Validation in Tenant Management

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -857,6 +857,9 @@
     "UnableToRetrieveUserDetails": "Unable to retrieve user's details from {0}.",
     "PropertyName": "Property Name",
     "TenantShortCodeRequired": "Short Code can not be empty",
-    "TenantShortCode": "Short Code"
+    "TenantShortCode": "Short Code",
+    "DomainIsRequired": "The Domain field is required.",
+    "Domain": "Domain",
+    "InvalidUrl": "Please provide a fully qualified URL starting with http or https."
   }
 }
