--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -894,6 +894,8 @@
     "DefaultPrivacyPolicy": "預設隱私政策",
     "LoginConfigurationsUpdated": "登入設定已更新!",
     "TenantShortCodeRequired": "請填寫統一編號。",
-    "TenantShortCode": "統一編號"
+    "TenantShortCode": "統一編號",
+    "DomainIsRequired": "請填寫域名。",
+    "Domain": "域名"
   }
 }
