#PK-409 Groupbuy front page URL

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -17,7 +17,7 @@
     "AutomaticRefund": "Automatic Refund",
     "ManualProcessing": "Manual Processing",
     "FrontPage": "Front Page",
-    "CopyPageLink": "Copy Link Page",
+    "CopyPageLink": "Copy Link",
     "GoodPoint": "Good Point",
     "Menu:Home": "Home",
     "Menu:GroupBuyManagement": "Group Buy Management",
