--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -860,6 +860,9 @@
     "TenantShortCode": "Short Code",
     "DomainIsRequired": "The Domain field is required.",
     "Domain": "Domain",
-    "InvalidUrl": "Please provide a fully qualified URL starting with http or https."
+    "InvalidUrl": "Please provide a fully qualified URL starting with http or https.",
+    "Pikachu:ProductCategoryAlreadyExists": "Product Category with same name {name} already exists.",
+    "Pikachu:ProductCategoryImageMaxLimit": "Product category can not have more than 5 images",
+    "Permission:ProductCategories": "Product Categories"
   }
 }
