#PK_366 Create Product category page

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -866,6 +866,7 @@
     "Permission:ProductCategories": "Product Categories",
     "Menu:ProductCategories": "Product Categories",
     "ProductCategories": "Product Categories",
-    "CarousalImages": "Carousal Images"
+    "CarousalImages": "Carousal Images",
+    "AddProductCategory": "Add Product Category"
   }
 }
