#PK-366 Edit Product Category page and List page updates

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -867,6 +867,7 @@
     "Menu:ProductCategories": "Product Categories",
     "ProductCategories": "Product Categories",
     "CarousalImages": "Carousal Images",
-    "AddProductCategory": "Add Product Category"
+    "AddProductCategory": "Add Product Category",
+    "EditProductCategory": "Edit Product Category"
   }
 }
